TEST DE BRANCHE : ajout d un paragraphe sur index

--- a/Liste_courses/WebContent/index.html
+++ b/Liste_courses/WebContent/index.html
@@ -7,5 +7,8 @@
 <body>
 
 <h1>First page....</h1>
+<p>
+Bacon ipsum dolor amet spare ribs burgdoggen ribeye strip steak boudin cupim short loin pork picanha corned beef rump swine. Kielbasa cow fatback spare ribs filet mignon. Sausage beef pork belly, tongue ribeye andouille frankfurter pork loin shoulder tail. Pastrami sausage beef, hamburger beef ribs kevin doner filet mignon landjaeger sirloin rump t-bone pork chop.
+</p>
 </body>
 </html>
